# kairos-core

./: README.md  pyproject.toml
.claude/skills/new-brick/: SKILL.md
kairos_core/: __init__.py  __main__.py  brick.py  config.py  discover.py  pipeline.py  registry.py  types.py  version.py
tests/: test_framework.py
tests/demo_bricks/echo/: __init__.py
tests/demo_bricks/textcase/: __init__.py
tests/demo_bricks/textcase/plugins/: __init__.py  lower.py  upper.py
tests/fixtures/: echo.yaml  textcase.yaml
